--- a/index.html
+++ b/index.html
@@ -5,41 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css.work/style.css">
 </head>
 <body>
-    <table border="1">
-     <tbody>
-        <tr>
-            <th>Amis</th>
+ <!-- input-form-->
+  
+ <input type="text">
+ <input type="tel">
+ <input type="email">
+ <input type= "search">
+ <input type="number">
+ <input type="file">
+ <input type="range">
+ <input type="submit">
+ <input type="reset">
+ <input type="radio">
+ <input type="checkbox">
+ <button>learne more</button>
+  
+ <form>
 
-            <td>Hunavr</td>
-            <td>petrvar</td>
-            <td>Mart</td>
+    <h3>lracreq dzer andznakan tvyalner@</h3>
+    <input type="text" placeholder="Greq dzer anun@"> <br><br>
+    <input type="text" placeholder="Greq dzer azganun@"> <br><br>
+   <input type="email" placeholder="Greq dzer email@"> <br><br> 
+   <input type="tel" placeholder="Greq dzer heraxosi hamr@">
+       <h3>Nsheq dzer seR@</h3>
+    <label>Igakan</label><input type="radio" name="gen" id="female">
+      <label>Arakan</label> <input type="radio" name="gen" id="male">
 
-        </tr>
-        <tr>
-            <th>Yekamut</th>
-            <td>150 000</td>
-            <td>200 000</td>
-            <td>300 000</td>
+      <h4>@ntreq dzer naxasirutyuner@</h4>
+
+      <label>Sport<input type="checkbox"></label> <br><br>
+      <label>meqenaner<input type="checkbox"></label> <br><br>
+      <label>Yerg<input type="checkbox"></label> <br><br>
+      <label>par<input type="checkbox"></label> <br><br>
 
 
-           <tr>
-            <th>Caxser</th>
-            <td>50 000</td>
-                <td>100 000</td>
-                <td>150 000</td>
-           </tr>
-              
+      
 
-        </tr>
-        <tr>
-            <th>Mnacord</th>
-            <td>100 000</td>
-            <td>100 000</td>
-            <td>150 000</td>
-        </tr>
-     </tbody>
-    </table>
+ </form>
+   
 </body>
 </html>
