--- a/index.html
+++ b/index.html
@@ -12,39 +12,44 @@
   
  <input type="text">
  <input type="tel">
+ <input type="password">
  <input type="email">
  <input type= "search">
  <input type="number">
  <input type="file">
  <input type="range">
  <input type="submit">
- <input type="reset">
- <input type="radio">
+ <input type="reset" >
+ <input type="radio" name="gen">
  <input type="checkbox">
  <button>learne more</button>
   
- <form>
+ <form action="" autocomplete="off">
 
     <h3>lracreq dzer andznakan tvyalner@</h3>
-    <input type="text" placeholder="Greq dzer anun@"> <br><br>
-    <input type="text" placeholder="Greq dzer azganun@"> <br><br>
-   <input type="email" placeholder="Greq dzer email@"> <br><br> 
-   <input type="tel" placeholder="Greq dzer heraxosi hamr@">
+    <input type="text" placeholder="Greq dzer anun@" name="name"> <br><br>
+    <input type="text" placeholder="Greq dzer azganun@" name="lastname"><br><br>
+   <input type="email" placeholder="Greq dzer email@" name="email"><br><br> 
+   <input type="tel" placeholder="Greq dzer heraxosi hamr@" name="telephone"><br><br>
+   <input type="password" placeholder="Greq dzer gxtnabar@" name="password"><br><br>
        <h3>Nsheq dzer seR@</h3>
     <label>Igakan</label><input type="radio" name="gen" id="female">
       <label>Arakan</label> <input type="radio" name="gen" id="male">
 
       <h4>@ntreq dzer naxasirutyuner@</h4>
 
-      <label>Sport<input type="checkbox"></label> <br><br>
-      <label>meqenaner<input type="checkbox"></label> <br><br>
-      <label>Yerg<input type="checkbox"></label> <br><br>
-      <label>par<input type="checkbox"></label> <br><br>
+      <label>Sport<input type="checkbox" name="sport"></label><br><br>
+      <label>meqenaner<input type="checkbox" name="meqenaner"></label><br><br>
+      <label>Yerg<input type="checkbox" name="yerg"></label><br><br>
+      <label>par<input type="checkbox" name="par"></label><br><br>
+      <h4>Verberneq dzer lusankar@</h4>
+      <label><input type="file"></label>
 
 
       
 
  </form>
-   
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrY91WlgyV05RTWTuWIm9eSb7AJ8qo4pyi71hX_yDYRA&s" alt=""> <br><br>
+         <img src="folder.img/product-cover-139.png" alt=""><br><br>
 </body>
 </html>
